bootstrap/kubernetes/apps/tools/apprise/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apprise-api
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apprise-api
  template:
    metadata:
      labels:
        app: apprise-api
    spec:
      containers:
        - name: apprise-api
          image: caronc/apprise:1.2.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

          resources:
            limits:
              cpu: "100m"
              memory: "256Mi"
            requests:
              cpu: "50m"
              memory: "128Mi"
