bootstrap/kubernetes/apps/tools/apprise/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apprise-api
  namespace: tools
spec:
  selector:
    app: apprise-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: LoadBalancer
  loadBalancerIP: 10.42.20.73
