bootstrap/kubernetes/apps/tools/apprise/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apprise-ingress
  namespace: tools
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  rules:
    - host: apprise.synergia.net.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apprise
                port:
                  number: 8000
